# assign5

./: .gitignore  Pipfile  package-lock.json  pyproject.toml  zip.py
data/invalid/: user.json  user_list.json
data/valid/input/: user_list.json
data/valid/output/: user.json  user_list.json
src/: __init__.py  location.py  main.py  user_manager.py  user_profile.py
tests/: age_test.py  password_test.py  user_profile_manager_test.py  user_profile_test.py
